# qml_demo

./: .gitignore  CMakeLists.txt  README.md  design.md  gif_converter.cc  gif_converter.h  main.cc  video_decoder.cc  video_decoder.h
qml/: main.qml  qml.qrc
qml/home/: Account.qml  Activities.qml  CloudSpace.qml  Enter.qml  Home.qml  Rss.qml  SideBar.qml  Welcome.qml
qml/video/: Timeline.qml  TrackDelegate.qml  VideoPlayer.qml  WorkSpace.qml
resources/: resources.qrc
